fix: theme setting bug and ios pwa height cut off

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   margin: 0;
   padding: 0;
   background-color: #121213;
@@ -68,7 +68,7 @@ html, body {
   width: 1126px;
   max-width: 100%;
   height: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   margin: 0 auto;
   text-align: center;
   border-inline: 1px solid var(--border);
